<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/undo_button"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/undo_button" />
    <item
        android:id="@+id/redo_button"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/redo_button" />
    
    <item 
        android:id="@+id/join_session" 
        android:titleCondensed="join" 
        android:title="@string/join_session"
        android:showAsAction="never" />
    
    <item 
        android:id="@+id/create_session" 
        android:titleCondensed="create" 
        android:title="@string/create_session"
        android:showAsAction="never" />
        
    <item 
        android:id="@+id/leave_session" 
        android:titleCondensed="leave" 
        android:title="@string/leave_session"
        android:showAsAction="never" />
    
    </menu>
